unpackaged/main/default/objects/srlg_Injured_Party__c/srlg_Injured_Party__c.object-meta.xml
<CustomObject>
    <label>Injured Party</label>
    <nameField>
        <label>Injured Party Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Injured Parties</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>