unpackaged/main/default/objects/srlg_Injured_Party__c/fields/Case_Type_Routing__c.field-meta.xml
<CustomField>
    <fullName>Case_Type_Routing__c</fullName>
    <label>Case Type Routing</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PFAS</fullName>
            </value>
            <value>
                <fullName>Round Up</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>