unpackaged/main/default/objects/srlg_Injured_Party__c/fields/Cause_Of_Death__c.field-meta.xml
<CustomField>
    <fullName>Cause_Of_Death__c</fullName>
    <label>Cause Of Death</label>
    <length>255</length>
    <type>Text</type>
</CustomField>