unpackaged/main/default/objects/srlg_Injured_Party__c/fields/Client_Is_Executor_Of_Will__c.field-meta.xml
<CustomField>
    <fullName>Client_Is_Executor_Of_Will__c</fullName>
    <label>Client Is Executor Of Will</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>