unpackaged/main/default/objects/srlg_Injured_Party__c/fields/Client_Is_Representative_Of_Estate__c.field-meta.xml
<CustomField>
    <fullName>Client_Is_Representative_Of_Estate__c</fullName>
    <label>Client Is Representative Of Estate</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>