unpackaged/main/default/objects/srlg_Injured_Party__c/fields/Date_Of_Birth__c.field-meta.xml
<CustomField>
    <fullName>Date_Of_Birth__c</fullName>
    <label>Date Of Birth</label>
    <type>Date</type>
</CustomField>