unpackaged/main/default/objects/srlg_Injured_Party__c/fields/Date_Of_Death__c.field-meta.xml
<CustomField>
    <fullName>Date_Of_Death__c</fullName>
    <label>Date Of Death</label>
    <type>Date</type>
</CustomField>