unpackaged/main/default/objects/srlg_Injured_Party__c/fields/Estate_Has_Been_Opened__c.field-meta.xml
<CustomField>
    <fullName>Estate_Has_Been_Opened__c</fullName>
    <label>Estate Has Been Opened</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>