unpackaged/main/default/objects/srlg_Injured_Party__c/fields/Estate_Is_Currently_Open__c.field-meta.xml
<CustomField>
    <fullName>Estate_Is_Currently_Open__c</fullName>
    <label>Estate Is Currently Open</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>