unpackaged/main/default/objects/srlg_Injured_Party__c/fields/hasFirefightingService__c.field-meta.xml
<CustomField>
    <fullName>hasFirefightingService__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if they have served as a Firefighter.</description>
    <inlineHelpText>Indicates if they have served as a Firefighter.</inlineHelpText>
    <label>hasFirefightingService</label>
    <type>Checkbox</type>
</CustomField>