unpackaged/main/default/objects/srlg_Injured_Party__c/fields/hasMilitaryService__c.field-meta.xml
<CustomField>
    <fullName>hasMilitaryService__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if they have served in the Military.</description>
    <inlineHelpText>Indicates if they have served in the Military.</inlineHelpText>
    <label>hasMilitaryService</label>
    <type>Checkbox</type>
</CustomField>