unpackaged/main/default/objects/srlg_Injured_Party__c/fields/Injured_Party_Address__c.field-meta.xml
<CustomField>
    <fullName>Injured_Party_Address__c</fullName>
    <label>Injured Party Address</label>
    <type>Address</type>
</CustomField>