unpackaged/main/default/objects/srlg_Injured_Party__c/fields/Is_Deceased__c.field-meta.xml
<CustomField>
    <fullName>Is_Deceased__c</fullName>
    <label>Is Deceased</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>