unpackaged/main/default/objects/srlg_Injured_Party__c/fields/Named_Informant__c.field-meta.xml
<CustomField>
    <fullName>Named_Informant__c</fullName>
    <label>Named Informant</label>
    <length>255</length>
    <type>Text</type>
</CustomField>