unpackaged/main/default/objects/srlg_Injured_Party__c/fields/Street_1__c.field-meta.xml
<CustomField>
    <fullName>Street_1__c</fullName>
    <formula>IF(
CONTAINS(Injured_Party_Address__Street__s, MID($Setup.Formula_References__c.Line_Break__c ,3,1)),
LEFT(
Injured_Party_Address__Street__s,
FIND(MID($Setup.Formula_References__c.Line_Break__c,3,1), Injured_Party_Address__Street__s)
),
Injured_Party_Address__Street__s
)</formula>
    <label>Street 1</label>
    <type>Text</type>
</CustomField>