unpackaged/main/default/objects/srlg_Injured_Party__c/fields/Street_2__c.field-meta.xml
<CustomField>
    <fullName>Street_2__c</fullName>
    <formula>IF(
CONTAINS(Injured_Party_Address__Street__s, MID($Setup.Formula_References__c.Line_Break__c ,3,1)),
RIGHT(
Injured_Party_Address__Street__s,
(LEN(Injured_Party_Address__Street__s) - FIND(MID($Setup.Formula_References__c.Line_Break__c,3,1), Injured_Party_Address__Street__s))
),
&quot;&quot;
)</formula>
    <label>Street 2</label>
    <type>Text</type>
</CustomField>