unpackaged/main/default/objects/srlg_Injured_Party__c/fields/Suffix__c.field-meta.xml
<CustomField>
    <fullName>Suffix__c</fullName>
    <label>Suffix</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>II</fullName>
            </value>
            <value>
                <fullName>III</fullName>
            </value>
            <value>
                <fullName>IV</fullName>
            </value>
            <value>
                <fullName>Jr.</fullName>
            </value>
            <value>
                <fullName>Sr.</fullName>
            </value>
            <value>
                <fullName>V</fullName>
            </value>
            <value>
                <fullName>VI</fullName>
            </value>
            <value>
                <fullName>VII</fullName>
            </value>
            <value>
                <fullName>VIII</fullName>
            </value>
            <value>
                <fullName>IX</fullName>
            </value>
            <value>
                <fullName>X</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>